add link the javascript files

--- a/gdpyapp/templates/base.html
+++ b/gdpyapp/templates/base.html
@@ -11,7 +11,7 @@
             <header>
                 <div id="titre_principal">
                     <div id="logo">
-                        <a href="/index/"><img src="../static/img/gdpy.png" alt="logo de GdPy" /></a>
+                        <a href="/"><img src="../static/img/gdpy.png" alt="logo de GdPy" /></a>
                         <h1>
                             Grand Py Bot
                         </h1>
@@ -29,5 +29,7 @@
 
             </footer>
         </div>
+    <script src="../static/js/ajax.js"></script>
+    <script src="../static/js/grandpy.js"></script>
     </body>
 </html>
