--- a/gdpyapp/templates/base.html
+++ b/gdpyapp/templates/base.html
@@ -2,34 +2,43 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="../static/css/style.css" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <title>Grand Py Bot</title>
     </head>
 
     <body>
-        <div id="bloc_page">
-            <header>
-                <div id="titre_principal">
-                    <div id="logo">
-                        <a href="/"><img src="../static/img/gdpy.png" alt="logo de GdPy" /></a>
-                        <h1>
-                            Grand Py Bot
-                        </h1>
+        <div class='container' id="bloc_page">
+            <header class="row pb-3 my-3 border-bottom">
+                <div class = "col-lg-12">
+                    <div class = "row" id="titre_principal">
+                        <div class = "col-md-12 col-lg-2 offset-lg-2"id="logo">
+                            <a href="/"><img src="../static/img/gdpy.png" alt="logo de GdPy" /></a>
+                        </div>
+                        <div class = "col-md-12 col-lg-6">
+                            <div class ="row">
+                                <h1 class = "col-lg-12">
+                                    Grand Py Bot
+                                </h1>
+                                <h2 class = "col-lg-12">
+                                    Le papi robot qui sait tout sur tout
+                                </h2>
+                            </div>
+                        </div>
                     </div>
-                    <h2>Le papi robot qui sait tout sur tout</h2>
                 </div>
             </header>
 
-            <section>
-                {% block content %}
-                {% endblock %}
+            <section class="row">
+                <div class="col-12">
+                    {% block content %}
+                    {% endblock %}
+                </div>
             </section>
 
             <footer>
-
             </footer>
         </div>
-    <script src="../static/js/ajax.js"></script>
-    <script src="../static/js/grandpy.js"></script>
+    <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/grandpy.js') }}"></script>
     </body>
 </html>
