--- a/gdpyapp/templates/base.html
+++ b/gdpyapp/templates/base.html
@@ -3,7 +3,20 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <title>Grand Py Bot</title>
+        <style type="text/css">
+            html, body {
+                height: 100%;
+            }
+            .container {
+                min-height: 100%;
+                padding-bottom: -100px;
+            }
+            footer {
+                
+            }
+        </style>
     </head>
 
     <body>
@@ -29,15 +42,21 @@
             </header>
 
             <section class="row">
-                <div class="col-12">
+                <div class="col-12" id="section">
                     {% block content %}
                     {% endblock %}
                 </div>
             </section>
-
-            <footer>
-            </footer>
         </div>
+
+            <footer class="card-footer row my-2 py-1 border-top">
+                <div class="col-md-3 offset-md-3 text-center">
+                    <span>Florian LESCUYER - Juin 2018</span>
+                </div>
+                <div class="col-md-3 text-center">
+                    <a href="https://github.com/mrflofinou/GrandPy-Bot"><i class="fab fa-github"></i> Mon GitHub</a>
+                </div>
+            </footer>
     <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
     <script src="{{ url_for('static', filename='js/grandpy.js') }}"></script>
     </body>
