--- a/gdpyapp/templates/index.html
+++ b/gdpyapp/templates/index.html
@@ -10,28 +10,15 @@
         </form>
     </div>
 
-    <div class = "row">
-        <div class="col-md-8 offset-md-2" id="presentation">
+    <div class = "row" id="presentation">
+        <div class="col-md-8 offset-md-2">
             <p class = "text-center alert alert-primary">
-                Bonjour mon petit poussin ! Je suis Grang Py Bot.<br />
+                Bonjour mon petit poussin ! Je suis Grand Py Bot.<br />
                 En toute modestie, je sais tout sur tout. Si tu veux avoir des infos sur un lieu, poses moi une question ! Et si tu n'est pas un vilain garnement, je te raconterai une histoire.
             </p>
         </div>
     </div>
 
-    <div class = "row" id="wikipedia" style="display:none">
-        <div class = "col-md-8 offset-md-2" >
-            <p class="text-center alert alert-primary" id="text">
-            </p>
-        </div>
+    <div id="response">
     </div>
-
-    <div class = "row" id="googlemaps" style="display:none">
-        <p class="col-md-8 offset-md-2 alert alert-warning text-center" id="mapError" style="display:none">
-        </P>
-        <iframe class = "col-md-8 offset-md-2" id="map"  height="350" frameborder="0" style="border:0" src="" allowfullscreen> <!-- The definition of the iframe from https://developers.google.com/maps/documentation/embed/guide?hl=fr -->
-        </iframe>
-    </div>
-
-
 {% endblock %}
