--- a/gdpyapp/templates/base.html
+++ b/gdpyapp/templates/base.html
@@ -17,12 +17,12 @@
     </head>
 
     <body>
-        <div class='container' id="bloc_page">
+        <div class="container" id="bloc_page">
             <header class="row pb-3 my-3 border-bottom">
-                <div class = "col-lg-12">
-                    <div class = "row" id="titre_principal">
-                        <div class = "col-md-12 col-lg-2 offset-lg-2"id="logo">
-                            <a href="/"><img src="../static/img/gdpy.png" alt="logo de GdPy" /></a>
+                <div class="col-lg-12">
+                    <div class="row" id="titre_principal">
+                        <div class="col-md-12 col-lg-2 offset-lg-2" id="logo">
+                            <a href="/"><img src="{{ url_for('static', filename='img/gdpy.png') }}" alt="logo de GdPy" /></a>
                         </div>
                         <div class = "col-md-12 col-lg-6">
                             <div class ="row">
