--- a/gdpyapp/templates/index.html
+++ b/gdpyapp/templates/index.html
@@ -3,15 +3,13 @@
 {% block content %}
     <div class = "row py-3">
         <form class = "col-12">
-            <div class"row">
-                <input  class="col-sm-12 col-md-4 offset-md-2 col-lg-3 offset-lg-3 my-1" type="text" name="request" id="request"/>
-                <input class = "col-sm-12 col-md-4 col-lg-3 btn btn-primary" type="submit" value="Demander à Grand Py" id="button" />
-            </div>
+                <input class="col-md-4 offset-md-2 col-lg-3 offset-lg-3 my-1" type="text" name="request" id="request"/>
+                <input class="col-md-4 col-lg-3 btn btn-primary" type="submit" value="Demander à Grand Py" id="button" />
         </form>
     </div>
 
     <div class = "row" id="presentation">
-        <div class="col-sm-12 col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2">
             <p class = "text-center alert alert-primary">
                 Bonjour mon petit poussin ! Je suis Grand Py Bot.<br />
                 En toute modestie, je sais tout sur tout. Si tu veux avoir des infos sur un lieu, poses moi une question ! Et si tu n'est pas un vilain garnement, je te raconterai une histoire.
