--- a/gdpyapp/templates/index.html
+++ b/gdpyapp/templates/index.html
@@ -12,7 +12,7 @@
         <div class="col-md-8 offset-md-2">
             <p class = "text-center alert alert-primary">
                 Bonjour mon petit poussin ! Je suis Grand Py Bot.<br />
-                En toute modestie, je sais tout sur tout. Si tu veux avoir des infos sur un lieu, poses moi une question ! Et si tu n'est pas un vilain garnement, je te raconterai une histoire.
+                En toute modestie, je sais tout sur tout. Si tu veux avoir des informations sur un lieu, poses moi une question ! Et si tu est sage comme une image, je te raconterai une histoire.
             </p>
         </div>
     </div>
